# Samp-gamemode-decompiler

./: README.md
src/decompiler/: CMakeLists.txt  decompiler.c  funcs.c  funcs.h  main.cpp  parse.cpp  parse.h
src/decompiler/components/: analyze.cpp  analyze.h  generate.cpp  generate.h  load.cpp  load.h
